--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0109.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0109.html
@@ -81,7 +81,7 @@
         </span>
         <span id="w_13" class="ocr_word" title="bbox 1668 282 1765 336" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,δεῖ</ins>
+            <ins title="nlp 2.00">δεῖ</ins>
           </span>
         </span>
         <span id="w_14" class="ocr_word" title="bbox 1795 297 1853 337" lang="grc">
@@ -188,7 +188,7 @@
         </span>
         <span id="w_33" class="ocr_word" title="bbox 727 495 863 538">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins title="nlp 2.00">ërt.</ins>
           </span>
         </span>
         <span id="w_34" class="ocr_word" title="bbox 896 494 978 539">
@@ -544,7 +544,7 @@
         </span>
         <span id="w_102" class="ocr_word" title="bbox 1331 1013 1429 1041" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">oἶον</ins>
+            <ins title="nlp 2.00">ἶον</ins>
           </span>
         </span>
         <span id="w_103" class="ocr_word" title="bbox 1472 1014 1585 1053" lang="grc">
@@ -638,7 +638,7 @@
         </span>
         <span id="w_120" class="ocr_word" title="bbox 730 1141 1032 1196" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,διαμηρίζειν</ins>
+            <ins title="nlp 2.00">διαμηρίζειν</ins>
           </span>
         </span>
         <span id="w_121" class="ocr_word" title="bbox 1062 1138 1202 1197" lang="grc">
@@ -913,19 +913,13 @@
             <ins class="alt" title="nlp 1.00">διέξεισιν</ins>
           </span>
         </span>
-        <span id="w_174" class="ocr_word" title="bbox 1901 1426 1981 1485">
+        <span id="w_174_0" class="ocr_word" title="bbox 1901 1426 1981 1485">
           <span class="alternatives">
-            <ins title="nlp 2.00">(se-</ins>
+            <ins class="alt" title="nlp 2.00">(sequuntur</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 239 1499 1814 1557">
-        <span id="w_175" class="ocr_word" title="bbox 239 1502 430 1555">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">quuntur</ins>
-            <del title="nlp 0.90">sequuntur</del>
-          </span>
-        </span>
         <span id="w_176" class="ocr_word" title="bbox 461 1500 606 1542">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">eadem</ins>
@@ -1015,19 +1009,19 @@
             <ins class="alt" title="nlp 1.00">πάλιν</ins>
           </span>
         </span>
-        <span id="w_192" class="ocr_word" title="bbox 1457 1570 1500 1628" lang="grc">
+        <span id="w_192_0" class="ocr_word" title="bbox 1457 1570 1500 1628">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ὁ</ins>
+            <ins class="alt" title="nlp 2.00">(ὁ</ins>
+          </span>
+        </span>
+        <span id="w_192_1" class="ocr_word" title="bbox 1457 1570 1500 1628">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_193" class="ocr_word" title="bbox 1536 1570 1713 1628" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">Ζήνων)</ins>
-          </span>
-        </span>
-        <span id="w_194" class="ocr_word" title="bbox 1744 1572 1980 1627" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">,,διαμεμήρικας</ins>
           </span>
         </span>
       </span>
@@ -1119,14 +1113,14 @@
             <ins class="alt" title="nlp 1.00">αὐτὸν</ins>
           </span>
         </span>
-        <span id="w_214" class="ocr_word" title="bbox 1780 1714 1844 1772" lang="grc">
+        <span id="w_214_0" class="ocr_word" title="bbox 1780 1714 1844 1772">
           <span class="alternatives">
-            <ins title="nlp 2.00">[ἤ]</ins>
+            <ins class="alt" title="nlp 2.00">[ἢ]</ins>
           </span>
         </span>
-        <span id="w_215" class="ocr_word" title="bbox 1877 1714 1981 1771" lang="grc">
+        <span id="w_214_1" class="ocr_word" title="bbox 1780 1714 1844 1772">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐφοβήης</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -1850,7 +1844,7 @@
         </span>
         <span id="w_355" class="ocr_word" title="bbox 687 2791 823 2833">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins title="nlp 2.00">ërt.</ins>
           </span>
         </span>
         <span id="w_356" class="ocr_word" title="bbox 851 2790 932 2833">
@@ -1861,7 +1855,7 @@
         </span>
         <span id="w_357" class="ocr_word" title="bbox 957 2791 1051 2833" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">121. γεύσεσθαί</ins>
+            <ins title="nlp 2.00">γεύσεσθαί</ins>
           </span>
         </span>
         <span id="w_358" class="ocr_word" title="bbox 1376 2807 1421 2834" lang="grc">
