--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0111.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0111.html
@@ -436,17 +436,17 @@
         </span>
         <span id="w_82" class="ocr_word" title="bbox 1059 814 1068 824">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">.</ins>
+            <ins title="nlp 2.00">.</ins>
           </span>
         </span>
         <span id="w_83" class="ocr_word" title="bbox 1088 814 1097 824">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">,</ins>
+            <ins title="nlp 2.00">.</ins>
           </span>
         </span>
         <span id="w_84" class="ocr_word" title="bbox 1120 815 1127 823">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">.</ins>
+            <ins title="nlp 2.00">.</ins>
           </span>
         </span>
         <span id="w_85" class="ocr_word" title="bbox 1160 780 1439 837" lang="grc">
@@ -1672,7 +1672,7 @@
         </span>
         <span id="w_317" class="ocr_word" title="bbox 518 2526 678 2569">
           <span class="alternatives">
-            <ins title="nlp 2.00">1034β.</ins>
+            <ins title="nlp 2.00">β.</ins>
           </span>
         </span>
         <span id="w_318" class="ocr_word" title="bbox 729 2541 793 2569" lang="grc">
