--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0112.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0112.html
@@ -12,7 +12,7 @@
       <span class="ocr_line" title="bbox 331 195 1383 239">
         <span id="w_0" class="ocr_word" title="bbox 331 195 400 239">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">,62</ins>
+            <ins title="nlp 2.00">62</ins>
           </span>
         </span>
         <span id="w_1" class="ocr_word" title="bbox 1032 197 1158 232">
@@ -129,7 +129,7 @@
       <span class="ocr_line" title="bbox 464 445 2076 506">
         <span id="w_21" class="ocr_word" title="bbox 464 446 556 489">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">266</ins>
+            <ins title="nlp 2.00">265</ins>
           </span>
         </span>
         <span id="w_22" class="ocr_word" title="bbox 590 446 794 503">
@@ -291,7 +291,7 @@
         </span>
         <span id="w_52" class="ocr_word" title="bbox 752 589 877 645" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,ἑρά</ins>
+            <ins title="nlp 2.00">ἑρά</ins>
           </span>
         </span>
         <span id="w_53" class="ocr_word" title="bbox 908 605 954 631" lang="grc">
@@ -532,7 +532,7 @@
         </span>
         <span id="w_97" class="ocr_word" title="bbox 1299 943 1435 986">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins title="nlp 2.00">ërt.</ins>
           </span>
         </span>
         <span id="w_98" class="ocr_word" title="bbox 1470 943 1553 985">
@@ -568,9 +568,14 @@
             <ins class="alt" title="nlp 1.00">διακοσίους</ins>
           </span>
         </span>
-        <span id="w_104" class="ocr_word" title="bbox 641 1015 874 1071" lang="grc">
+        <span id="w_104_0" class="ocr_word" title="bbox 641 1015 874 1071">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;003C;στίχους&amp;003E; </ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;στίχους&amp;#x003Ε;</ins>
+          </span>
+        </span>
+        <span id="w_104_1" class="ocr_word" title="bbox 641 1015 874 1071">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_105" class="ocr_word" title="bbox 916 1014 1031 1070" lang="grc">
@@ -601,11 +606,6 @@
         <span id="w_110" class="ocr_word" title="bbox 1773 1027 1993 1070" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">γυμνάσια</ins>
-          </span>
-        </span>
-        <span id="w_111" class="ocr_word" title="bbox 2029 1030 2078 1057" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐν</ins>
           </span>
         </span>
       </span>
@@ -661,7 +661,7 @@
         </span>
         <span id="w_121" class="ocr_word" title="bbox 835 1156 973 1199">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins title="nlp 2.00">ërt.</ins>
           </span>
         </span>
         <span id="w_122" class="ocr_word" title="bbox 994 1156 1077 1199">
@@ -704,7 +704,7 @@
       <span class="ocr_line" title="bbox 345 1226 2077 1285">
         <span id="w_129" class="ocr_word" title="bbox 345 1230 564 1285" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,νόμισμα</ins>
+            <ins title="nlp 2.00">νόμισμα</ins>
           </span>
         </span>
         <span id="w_130" class="ocr_word" title="bbox 595 1229 622 1271" lang="grc">
@@ -779,7 +779,7 @@
         </span>
         <span id="w_147" class="ocr_word" title="bbox 827 1370 963 1413">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins title="nlp 2.00">ërt.</ins>
           </span>
         </span>
         <span id="w_148" class="ocr_word" title="bbox 984 1370 1067 1413">
@@ -1067,9 +1067,14 @@
             <ins class="alt" title="nlp 1.00">πολιτείᾳ,</ins>
           </span>
         </span>
-        <span id="w_204" class="ocr_word" title="bbox 809 1737 906 1785" lang="grc">
+        <span id="w_204_0" class="ocr_word" title="bbox 809 1737 906 1785">
           <span class="alternatives">
-            <ins title="nlp 2.00">(τὸν</ins>
+            <ins class="alt" title="nlp 2.00">(τὸν</ins>
+          </span>
+        </span>
+        <span id="w_204_1" class="ocr_word" title="bbox 809 1737 906 1785">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_205" class="ocr_word" title="bbox 938 1737 1100 1796" lang="grc">
@@ -1080,11 +1085,6 @@
         <span id="w_206" class="ocr_word" title="bbox 1132 1738 1204 1781" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
-          </span>
-        </span>
-        <span id="w_207" class="ocr_word" title="bbox 1235 1740 1643 1794" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">παιδοποιήσεσθαι.</ins>
           </span>
         </span>
       </span>
@@ -1455,7 +1455,7 @@
         </span>
         <span id="w_270" class="ocr_word" title="bbox 841 2418 977 2460">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins title="nlp 2.00">ërt.</ins>
           </span>
         </span>
         <span id="w_271" class="ocr_word" title="bbox 1011 2416 1073 2459">
