--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0113.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0113.html
@@ -23,7 +23,7 @@
         </span>
         <span id="w_2" class="ocr_word" title="bbox 1912 171 1973 215">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.94">A8</ins>
+            <ins title="nlp 2.00">63</ins>
           </span>
         </span>
       </span>
@@ -149,7 +149,7 @@
         </span>
         <span id="w_27" class="ocr_word" title="bbox 757 425 871 482" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,ἐγώ</ins>
+            <ins title="nlp 2.00">ἐγώ</ins>
           </span>
         </span>
         <span id="w_28" class="ocr_word" title="bbox 897 442 972 482" lang="grc">
@@ -499,9 +499,14 @@
             <ins title="nlp 2.00">τῶν</ins>
           </span>
         </span>
-        <span id="w_95" class="ocr_word" title="bbox 357 927 474 983" lang="grc">
+        <span id="w_95_0" class="ocr_word" title="bbox 357 927 474 983">
           <span class="alternatives">
-            <ins title="nlp 2.00">[τοῦ] Ὁμήρου</ins>
+            <ins class="alt" title="nlp 2.00">[τοῦ]</ins>
+          </span>
+        </span>
+        <span id="w_95_1" class="ocr_word" title="bbox 357 927 474 983">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">Ὁμήρου</ins>
           </span>
         </span>
         <span id="w_96" class="ocr_word" title="bbox 722 924 861 980" lang="grc">
@@ -950,7 +955,7 @@
         </span>
         <span id="w_184" class="ocr_word" title="bbox 1090 1498 1346 1552" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,Αἰθίοπας</ins>
+            <ins title="nlp 2.00">Αἰθίοπας</ins>
           </span>
         </span>
         <span id="w_185" class="ocr_word" title="bbox 1375 1496 1432 1539" lang="grc">
@@ -1233,16 +1238,11 @@
         </span>
         <span id="w_236" class="ocr_word" title="bbox 1866 1783 1984 1837" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">Τρω-</ins>
+            <ins title="nlp 2.00">Τρωγλοδύτας</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 241 1850 1984 1911">
-        <span id="w_237" class="ocr_word" title="bbox 241 1856 458 1911" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">γλοδύτας</ins>
-          </span>
-        </span>
         <span id="w_238" class="ocr_word" title="bbox 495 1854 769 1910" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὑπονοητέον</ins>
@@ -1322,7 +1322,7 @@
         </span>
         <span id="w_253" class="ocr_word" title="bbox 1198 1926 1299 1981" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,καὶ</ins>
+            <ins title="nlp 2.00">καὶ</ins>
           </span>
         </span>
         <span id="w_254" class="ocr_word" title="bbox 1332 1927 1575 1976" lang="grc">
@@ -1355,7 +1355,7 @@
         </span>
         <span id="w_259" class="ocr_word" title="bbox 735 1998 874 2041">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins title="nlp 2.00">ërt.</ins>
           </span>
         </span>
         <span id="w_260" class="ocr_word" title="bbox 901 1997 1007 2040">
@@ -1755,7 +1755,7 @@
         </span>
         <span id="w_333" class="ocr_word" title="bbox 1791 2937 1988 2972">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laëetiano</ins>
+            <ins title="nlp 2.00">ëetiano</ins>
           </span>
         </span>
       </span>
@@ -1859,9 +1859,14 @@
             <ins class="alt" title="nlp 1.00">14</ins>
           </span>
         </span>
-        <span id="w_354" class="ocr_word" title="bbox 776 3047 796 3083" lang="grc">
+        <span id="w_354_0" class="ocr_word" title="bbox 776 3047 796 3083">
           <span class="alternatives">
-            <ins title="nlp 2.00">δ</ins>
+            <ins class="alt" title="nlp 2.00">ὁ</ins>
+          </span>
+        </span>
+        <span id="w_354_1" class="ocr_word" title="bbox 776 3047 796 3083">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_355" class="ocr_word" title="bbox 823 3046 864 3084" lang="grc">
@@ -1902,14 +1907,9 @@
             <del title="nlp 0.90">Theog.</del>
           </span>
         </span>
-        <span id="w_362" class="ocr_word" title="bbox 1655 3046 1851 3079">
+        <span id="w_362_0" class="ocr_word" title="bbox 1655 3046 1851 3079">
           <span class="alternatives">
-            <ins title="nlp 2.00">126—128.</ins>
-          </span>
-        </span>
-        <span id="w_363" class="ocr_word" title="bbox 1893 3046 1988 3079" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Γαῖα</ins>
+            <ins class="alt" title="nlp 2.00">126—128.</ins>
           </span>
         </span>
       </span>
