--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0115.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0115.html
@@ -287,9 +287,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 212 637 1952 698">
-        <span id="w_52" class="ocr_word" title="bbox 212 650 346 698">
+        <span id="w_52_0" class="ocr_word" title="bbox 212 650 346 698">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,τοῦτ’</ins>
+            <ins class="alt" title="nlp 2.00">„τοῦτ’</ins>
+          </span>
+        </span>
+        <span id="w_52_1" class="ocr_word" title="bbox 212 650 346 698">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_54" class="ocr_word" title="bbox 386 642 539 696" lang="grc">
@@ -304,7 +309,7 @@
         </span>
         <span id="w_56" class="ocr_word" title="bbox 688 640 741 696">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,δ</ins>
+            <ins title="nlp 2.00">δ</ins>
           </span>
         </span>
         <span id="w_57" class="ocr_word" title="bbox 767 639 986 696" lang="grc">
@@ -330,11 +335,6 @@
         <span id="w_61" class="ocr_word" title="bbox 1759 637 1783 681" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὁ</ins>
-          </span>
-        </span>
-        <span id="w_62" class="ocr_word" title="bbox 1809 638 1952 692" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">λόγος.</ins>
           </span>
         </span>
       </span>
@@ -563,7 +563,7 @@
         </span>
         <span id="w_107" class="ocr_word" title="bbox 1021 994 1148 1052" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,περὶ</ins>
+            <ins title="nlp 2.00">περὶ</ins>
           </span>
         </span>
         <span id="w_108" class="ocr_word" title="bbox 1181 1007 1262 1039" lang="grc">
@@ -625,7 +625,7 @@
         </span>
         <span id="w_119" class="ocr_word" title="bbox 1079 1068 1215 1122" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,ἄλλο</ins>
+            <ins title="nlp 2.00">ἄλλο</ins>
           </span>
         </span>
         <span id="w_120" class="ocr_word" title="bbox 1246 1065 1399 1122" lang="grc">
@@ -1454,7 +1454,7 @@
         </span>
         <span id="w_283" class="ocr_word" title="bbox 1641 2139 1778 2182">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins title="nlp 2.00">ërt.</ins>
           </span>
         </span>
         <span id="w_284" class="ocr_word" title="bbox 1794 2137 1877 2181">
@@ -1521,7 +1521,7 @@
         </span>
         <span id="w_296" class="ocr_word" title="bbox 1792 2211 1892 2267">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,καὶ</ins>
+            <ins title="nlp 2.00">καὶ</ins>
           </span>
         </span>
         <span id="w_297" class="ocr_word" title="bbox 1923 2209 1971 2254" lang="grc">
@@ -1571,7 +1571,7 @@
         </span>
         <span id="w_305" class="ocr_word" title="bbox 719 2358 856 2401">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins title="nlp 2.00">ërt.</ins>
           </span>
         </span>
         <span id="w_306" class="ocr_word" title="bbox 886 2355 968 2400">
@@ -1669,9 +1669,14 @@
             <ins class="alt" title="nlp 1.00">ἔφη</ins>
           </span>
         </span>
-        <span id="w_325" class="ocr_word" title="bbox 834 2516 935 2556" lang="grc">
+        <span id="w_325_0" class="ocr_word" title="bbox 834 2516 935 2556">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,καὶ</ins>
+            <ins class="alt" title="nlp 2.00">„καὶ</ins>
+          </span>
+        </span>
+        <span id="w_325_1" class="ocr_word" title="bbox 834 2516 935 2556">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_326" class="ocr_word" title="bbox 967 2516 1056 2542" lang="grc">
@@ -1697,11 +1702,6 @@
         <span id="w_330" class="ocr_word" title="bbox 1618 2497 1824 2553" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀγαθῶν,</ins>
-          </span>
-        </span>
-        <span id="w_331" class="ocr_word" title="bbox 1866 2497 1970 2553" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">κράτιστον</ins>
           </span>
         </span>
       </span>
@@ -1943,7 +1943,7 @@
         </span>
         <span id="w_379" class="ocr_word" title="bbox 1505 2872 1594 2910" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,ὡς</ins>
+            <ins title="nlp 2.00">ὡς</ins>
           </span>
         </span>
         <span id="w_380" class="ocr_word" title="bbox 1626 2856 1834 2912" lang="grc">
@@ -1958,9 +1958,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 233 2924 1972 2989">
-        <span id="w_382" class="ocr_word" title="bbox 233 2949 313 2989" lang="grc">
+        <span id="w_382_0" class="ocr_word" title="bbox 233 2949 313 2989">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,με</ins>
+            <ins class="alt" title="nlp 2.00">„με</ins>
+          </span>
+        </span>
+        <span id="w_382_1" class="ocr_word" title="bbox 233 2949 313 2989">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_383" class="ocr_word" title="bbox 344 2932 607 2989" lang="grc">
@@ -2001,11 +2006,6 @@
         <span id="w_390" class="ocr_word" title="bbox 1673 2933 1726 2984" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῇ</ins>
-          </span>
-        </span>
-        <span id="w_391" class="ocr_word" title="bbox 1756 2929 1972 2983" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">θεραπείᾳ</ins>
           </span>
         </span>
       </span>
