--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0116.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0116.html
@@ -39,9 +39,14 @@
             <del title="nlp 0.90">Diogenes</del>
           </span>
         </span>
-        <span id="w_5" class="ocr_word" title="bbox 868 299 1004 342">
+        <span id="w_5_0" class="ocr_word" title="bbox 868 299 1004 342">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins class="alt" title="nlp 2.00">Laërt.</ins>
+          </span>
+        </span>
+        <span id="w_5_1" class="ocr_word" title="bbox 868 299 1004 342">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_6" class="ocr_word" title="bbox 1038 300 1120 343">
@@ -78,11 +83,6 @@
         <span id="w_12" class="ocr_word" title="bbox 1924 305 1970 349" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἐκ</ins>
-          </span>
-        </span>
-        <span id="w_13" class="ocr_word" title="bbox 2019 315 2095 362" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τῆς</ins>
           </span>
         </span>
       </span>
@@ -330,7 +330,7 @@
         </span>
         <span id="w_60" class="ocr_word" title="bbox 642 727 894 783" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,ἔρχομαι,“</ins>
+            <ins title="nlp 2.00">ἔρχομαι,“</ins>
           </span>
         </span>
         <span id="w_61" class="ocr_word" title="bbox 926 722 1031 782" lang="grc">
@@ -340,7 +340,7 @@
         </span>
         <span id="w_62" class="ocr_word" title="bbox 1062 743 1132 783" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,τί</ins>
+            <ins title="nlp 2.00">τί</ins>
           </span>
         </span>
         <span id="w_63" class="ocr_word" title="bbox 1164 744 1215 783" lang="grc">
@@ -409,17 +409,17 @@
         </span>
         <span id="w_76" class="ocr_word" title="bbox 1442 832 1451 841">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">.</ins>
+            <ins title="nlp 2.00">.</ins>
           </span>
         </span>
         <span id="w_77" class="ocr_word" title="bbox 1472 832 1481 842">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">.</ins>
+            <ins title="nlp 2.00">.</ins>
           </span>
         </span>
         <span id="w_78" class="ocr_word" title="bbox 1502 833 1510 842">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">.</ins>
+            <ins title="nlp 2.00">.</ins>
           </span>
         </span>
         <span id="w_79" class="ocr_word" title="bbox 1532 816 1584 842" lang="grc">
@@ -471,7 +471,7 @@
         </span>
         <span id="w_88" class="ocr_word" title="bbox 1756 888 1824 927" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,τί</ins>
+            <ins title="nlp 2.00">τί</ins>
           </span>
         </span>
         <span id="w_89" class="ocr_word" title="bbox 1856 889 1908 928" lang="grc">
@@ -815,9 +815,9 @@
             <ins class="alt" title="nlp 1.00">αὐτῷ</ins>
           </span>
         </span>
-        <span id="w_157" class="ocr_word" title="bbox 1906 1326 2092 1367" lang="grc">
+        <span id="w_157_0" class="ocr_word" title="bbox 1906 1326 2092 1367">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,πορευθεὶς</ins>
+            <ins class="alt" title="nlp 2.00">„πορευθεὶς</ins>
           </span>
         </span>
       </span>
@@ -940,8 +940,7 @@
         </span>
         <span id="w_181" class="ocr_word" title="bbox 1408 1533 1456 1576">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
+            <ins title="nlp 2.00">δ’</ins>
           </span>
         </span>
         <span id="w_182" class="ocr_word" title="bbox 1475 1535 1497 1577" lang="grc">
@@ -1305,9 +1304,14 @@
             <del title="nlp 0.90">Diog.</del>
           </span>
         </span>
-        <span id="w_253" class="ocr_word" title="bbox 664 2034 800 2077">
+        <span id="w_253_0" class="ocr_word" title="bbox 664 2034 800 2077">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins class="alt" title="nlp 2.00">Laërt.</ins>
+          </span>
+        </span>
+        <span id="w_253_1" class="ocr_word" title="bbox 664 2034 800 2077">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_254" class="ocr_word" title="bbox 827 2032 911 2076">
@@ -1337,12 +1341,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">eleganter</ins>
             <del title="nlp 0.90">eleganter</del>
-          </span>
-        </span>
-        <span id="w_259" class="ocr_word" title="bbox 1622 2036 1775 2075">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">narrat.</ins>
-            <del title="nlp 0.90">narrat.</del>
           </span>
         </span>
       </span>
@@ -1635,8 +1633,7 @@
         </span>
         <span id="w_314" class="ocr_word" title="bbox 1399 2471 1447 2514">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
+            <ins title="nlp 2.00">δ’</ins>
           </span>
         </span>
         <span id="w_315" class="ocr_word" title="bbox 1464 2471 1834 2526" lang="grc">
@@ -1740,7 +1737,7 @@
         </span>
         <span id="w_336" class="ocr_word" title="bbox 1259 2617 1334 2670" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,τί</ins>
+            <ins title="nlp 2.00">τί</ins>
           </span>
         </span>
         <span id="w_337" class="ocr_word" title="bbox 1379 2631 1463 2657" lang="grc">
@@ -1780,9 +1777,14 @@
             <ins class="alt" title="nlp 1.00">ὑπὸ</ins>
           </span>
         </span>
-        <span id="w_344" class="ocr_word" title="bbox 685 2688 815 2739">
+        <span id="w_344_0" class="ocr_word" title="bbox 685 2688 815 2739">
           <span class="alternatives">
-            <ins title="nlp 2.00">;“</ins>
+            <ins class="alt" title="nlp 2.00">σοῦ;”</ins>
+          </span>
+        </span>
+        <span id="w_344_1" class="ocr_word" title="bbox 685 2688 815 2739">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_345" class="ocr_word" title="bbox 847 2687 999 2730">
@@ -1803,11 +1805,6 @@
             <del title="nlp 0.90">v.</del>
           </span>
         </span>
-        <span id="w_348" class="ocr_word" title="bbox 1152 2687 1406 2741" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σκιμαλίσω.</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 296 2755 2083 2816">
         <span id="w_349" class="ocr_word" title="bbox 296 2779 331 2806">
@@ -1826,9 +1823,14 @@
             <del title="nlp 0.90">Diogenes</del>
           </span>
         </span>
-        <span id="w_352" class="ocr_word" title="bbox 849 2759 985 2801">
+        <span id="w_352_0" class="ocr_word" title="bbox 849 2759 985 2801">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins class="alt" title="nlp 2.00">Laërt.</ins>
+          </span>
+        </span>
+        <span id="w_352_1" class="ocr_word" title="bbox 849 2759 985 2801">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_353" class="ocr_word" title="bbox 1012 2756 1095 2800">
@@ -1860,11 +1862,6 @@
         <span id="w_358" class="ocr_word" title="bbox 1581 2772 1660 2799" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
-          </span>
-        </span>
-        <span id="w_359" class="ocr_word" title="bbox 1702 2755 2083 2811" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καλλωπιζομένου</ins>
           </span>
         </span>
       </span>
@@ -1911,7 +1908,7 @@
         </span>
         <span id="w_368" class="ocr_word" title="bbox 1863 2828 2084 2881" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δικαίως,</ins>
+            <ins title="nlp 2.00">„δικαίως,</ins>
           </span>
         </span>
       </span>
@@ -2103,16 +2100,11 @@
         </span>
         <span id="w_402" class="ocr_word" title="bbox 1894 3115 2081 3148" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὑπερανα-</ins>
+            <ins title="nlp 2.00">ὑπερανακειμένοιν</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 349 3156 2031 3210">
-        <span id="w_403" class="ocr_word" title="bbox 349 3162 535 3210" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κειμένοιν</ins>
-          </span>
-        </span>
         <span id="w_404" class="ocr_word" title="bbox 560 3162 661 3208">
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">libri,</ins>
