--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0117.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0117.html
@@ -157,7 +157,7 @@
         </span>
         <span id="w_28" class="ocr_word" title="bbox 1151 445 1205 504">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,ἧ</ins>
+            <ins title="nlp 2.00">ἧ</ins>
           </span>
         </span>
         <span id="w_29" class="ocr_word" title="bbox 1237 462 1325 490" lang="grc">
@@ -262,9 +262,14 @@
             <del title="nlp 0.90">Diogenes</del>
           </span>
         </span>
-        <span id="w_49" class="ocr_word" title="bbox 689 663 827 707">
+        <span id="w_49_0" class="ocr_word" title="bbox 689 663 827 707">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins class="alt" title="nlp 2.00">Laërt.</ins>
+          </span>
+        </span>
+        <span id="w_49_1" class="ocr_word" title="bbox 689 663 827 707">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_50" class="ocr_word" title="bbox 856 661 938 706">
@@ -301,11 +306,6 @@
         <span id="w_56" class="ocr_word" title="bbox 1704 661 1804 704" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">οὔτε</ins>
-          </span>
-        </span>
-        <span id="w_57" class="ocr_word" title="bbox 1837 677 1941 712" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοὺς</ins>
           </span>
         </span>
       </span>
@@ -375,9 +375,14 @@
             <del title="nlp 0.90">Diogenes</del>
           </span>
         </span>
-        <span id="w_70" class="ocr_word" title="bbox 685 879 821 921">
+        <span id="w_70_0" class="ocr_word" title="bbox 685 879 821 921">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins class="alt" title="nlp 2.00">Laërt.</ins>
+          </span>
+        </span>
+        <span id="w_70_1" class="ocr_word" title="bbox 685 879 821 921">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_71" class="ocr_word" title="bbox 843 877 926 920">
@@ -419,11 +424,6 @@
         <span id="w_78" class="ocr_word" title="bbox 1623 877 1767 931" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">φήσας</ins>
-          </span>
-        </span>
-        <span id="w_79" class="ocr_word" title="bbox 1792 873 1943 918" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ἔλαιον</ins>
           </span>
         </span>
       </span>
@@ -589,9 +589,14 @@
             <ins title="nlp 2.00">εἰπόντα</ins>
           </span>
         </span>
-        <span id="w_110" class="ocr_word" title="bbox 416 1165 708 1221" lang="grc">
+        <span id="w_110_0" class="ocr_word" title="bbox 416 1165 708 1221">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,ἀπολοίμην,</ins>
+            <ins class="alt" title="nlp 2.00">„ἀπολοίμην,</ins>
+          </span>
+        </span>
+        <span id="w_110_1" class="ocr_word" title="bbox 416 1165 708 1221">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_111" class="ocr_word" title="bbox 742 1164 820 1209" lang="grc">
@@ -614,9 +619,14 @@
             <ins title="nlp 2.00">τιμωρήσωμαι“</ins>
           </span>
         </span>
-        <span id="w_115" class="ocr_word" title="bbox 1381 1162 1495 1219" lang="grc">
+        <span id="w_115_0" class="ocr_word" title="bbox 1381 1162 1495 1219">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,ἐγὼ</ins>
+            <ins class="alt" title="nlp 2.00">„ἐγὼ</ins>
+          </span>
+        </span>
+        <span id="w_115_1" class="ocr_word" title="bbox 1381 1162 1495 1219">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_116" class="ocr_word" title="bbox 1521 1163 1585 1217" lang="grc">
@@ -627,16 +637,6 @@
         <span id="w_117" class="ocr_word" title="bbox 1617 1157 1754 1217" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">εἶπεν,</ins>
-          </span>
-        </span>
-        <span id="w_118" class="ocr_word" title="bbox 1785 1161 1863 1205" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐὰν</ins>
-          </span>
-        </span>
-        <span id="w_119" class="ocr_word" title="bbox 1886 1163 1946 1216" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μή</ins>
           </span>
         </span>
       </span>
@@ -671,7 +671,7 @@
         </span>
         <span id="w_125" class="ocr_word" title="bbox 696 1307 834 1350">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins title="nlp 2.00">ërt.</ins>
           </span>
         </span>
         <span id="w_126" class="ocr_word" title="bbox 862 1306 945 1350">
@@ -734,7 +734,7 @@
         </span>
         <span id="w_138" class="ocr_word" title="bbox 745 1381 953 1436" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,εἵμαρτό</ins>
+            <ins title="nlp 2.00">εἵμαρτό</ins>
           </span>
         </span>
         <span id="w_139" class="ocr_word" title="bbox 984 1395 1059 1436" lang="grc">
@@ -754,7 +754,7 @@
         </span>
         <span id="w_142" class="ocr_word" title="bbox 1424 1378 1525 1432" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,καὶ</ins>
+            <ins title="nlp 2.00">καὶ</ins>
           </span>
         </span>
         <span id="w_143" class="ocr_word" title="bbox 1557 1377 1786 1432" lang="grc">
@@ -875,7 +875,7 @@
       <span class="ocr_line" title="bbox 201 1590 1946 1651">
         <span id="w_166" class="ocr_word" title="bbox 375 1599 554 1650" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,ἵωμεν,</ins>
+            <ins title="nlp 2.00">ἵωμεν,</ins>
           </span>
         </span>
         <span id="w_167" class="ocr_word" title="bbox 587 1596 741 1649" lang="grc">
@@ -1170,9 +1170,14 @@
             <ins title="nlp 2.00">Diogenes</ins>
           </span>
         </span>
-        <span id="w_221" class="ocr_word" title="bbox 697 1953 836 1996">
+        <span id="w_221_0" class="ocr_word" title="bbox 697 1953 836 1996">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins class="alt" title="nlp 2.00">Laërt.</ins>
+          </span>
+        </span>
+        <span id="w_221_1" class="ocr_word" title="bbox 697 1953 836 1996">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_222" class="ocr_word" title="bbox 863 1950 946 1995">
@@ -1204,11 +1209,6 @@
         <span id="w_227" class="ocr_word" title="bbox 1584 1949 1819 2005" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀφωμοίου</ins>
-          </span>
-        </span>
-        <span id="w_228" class="ocr_word" title="bbox 1857 1956 1951 2000" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ταῖς</ins>
           </span>
         </span>
       </span>
@@ -1334,9 +1334,14 @@
             <del title="nlp 0.90">Diogenes</del>
           </span>
         </span>
-        <span id="w_252" class="ocr_word" title="bbox 699 2167 836 2210">
+        <span id="w_252_0" class="ocr_word" title="bbox 699 2167 836 2210">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins class="alt" title="nlp 2.00">Laërt.</ins>
+          </span>
+        </span>
+        <span id="w_252_1" class="ocr_word" title="bbox 699 2167 836 2210">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_253" class="ocr_word" title="bbox 864 2165 948 2209">
@@ -1368,11 +1373,6 @@
         <span id="w_258" class="ocr_word" title="bbox 1574 2168 1777 2219" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">μαθητοῦ</ins>
-          </span>
-        </span>
-        <span id="w_259" class="ocr_word" title="bbox 1808 2164 1951 2206" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πολλὰ</ins>
           </span>
         </span>
       </span>
@@ -1422,9 +1422,9 @@
             <ins class="alt" title="nlp 1.00">θρασέως</ins>
           </span>
         </span>
-        <span id="w_269" class="ocr_word" title="bbox 1815 2235 1949 2290" lang="grc">
+        <span id="w_269_0" class="ocr_word" title="bbox 1815 2235 1949 2290">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,ἀδύνατον,</ins>
+            <ins class="alt" title="nlp 2.00">„ἀδύνατον,</ins>
           </span>
         </span>
       </span>
@@ -1620,7 +1620,7 @@
         </span>
         <span id="w_305" class="ocr_word" title="bbox 710 2524 848 2567">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins title="nlp 2.00">ërt.</ins>
           </span>
         </span>
         <span id="w_306" class="ocr_word" title="bbox 875 2522 958 2566">
@@ -1703,7 +1703,7 @@
         </span>
         <span id="w_321" class="ocr_word" title="bbox 1643 2608 1726 2648" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,οὐ</ins>
+            <ins title="nlp 2.00">οὐ</ins>
           </span>
         </span>
         <span id="w_322" class="ocr_word" title="bbox 1758 2609 1842 2649" lang="grc">
