--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0118.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0118.html
@@ -174,9 +174,14 @@
             <del title="nlp 0.90">Diogenes</del>
           </span>
         </span>
-        <span id="w_30" class="ocr_word" title="bbox 852 553 988 595">
+        <span id="w_30_0" class="ocr_word" title="bbox 852 553 988 595">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins class="alt" title="nlp 2.00">Laërt.</ins>
+          </span>
+        </span>
+        <span id="w_30_1" class="ocr_word" title="bbox 852 553 988 595">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_31" class="ocr_word" title="bbox 1008 551 1092 595">
@@ -220,16 +225,11 @@
             <ins class="alt" title="nlp 1.00">τὰ</ins>
           </span>
         </span>
-        <span id="w_39" class="ocr_word" title="bbox 1963 555 2103 597" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πολλὰ</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 338 622 2102 680">
         <span id="w_40" class="ocr_word" title="bbox 338 640 354 666">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">6</ins>
+            <ins title="nlp 2.00">5</ins>
           </span>
         </span>
         <span id="w_41" class="ocr_word" title="bbox 373 639 490 666" lang="grc">
@@ -473,9 +473,14 @@
             <del title="nlp 0.90">Diogenes</del>
           </span>
         </span>
-        <span id="w_87" class="ocr_word" title="bbox 864 978 999 1022">
+        <span id="w_87_0" class="ocr_word" title="bbox 864 978 999 1022">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins class="alt" title="nlp 2.00">Laërt.</ins>
+          </span>
+        </span>
+        <span id="w_87_1" class="ocr_word" title="bbox 864 978 999 1022">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_88" class="ocr_word" title="bbox 1027 978 1111 1021">
@@ -512,11 +517,6 @@
         <span id="w_94" class="ocr_word" title="bbox 1844 979 1942 1037" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">περὶ</ins>
-          </span>
-        </span>
-        <span id="w_95" class="ocr_word" title="bbox 1964 980 2102 1024" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Πολέμωνος,</ins>
           </span>
         </span>
       </span>
@@ -558,7 +558,7 @@
         </span>
         <span id="w_104" class="ocr_word" title="bbox 1934 1054 2103 1107" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πόσου</ins>
+            <ins title="nlp 2.00">„πόσου</ins>
           </span>
         </span>
       </span>
@@ -568,9 +568,14 @@
             <ins class="alt" title="nlp 1.00">γὰρ</ins>
           </span>
         </span>
-        <span id="w_106" class="ocr_word" title="bbox 489 1120 601 1176">
+        <span id="w_106_0" class="ocr_word" title="bbox 489 1120 601 1176">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;ἃν&amp;x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&amp;#x003C;ἂν&amp;#x003Ε;</ins>
+          </span>
+        </span>
+        <span id="w_106_1" class="ocr_word" title="bbox 489 1120 601 1176">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_107" class="ocr_word" title="bbox 632 1122 800 1176" lang="grc">
@@ -581,11 +586,6 @@
         <span id="w_108" class="ocr_word" title="bbox 831 1122 883 1163" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὰ</ins>
-          </span>
-        </span>
-        <span id="w_109" class="ocr_word" title="bbox 915 1122 1172 1177" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">διδόμενα;“</ins>
           </span>
         </span>
       </span>
@@ -601,9 +601,14 @@
             <del title="nlp 0.90">Diogenes</del>
           </span>
         </span>
-        <span id="w_112" class="ocr_word" title="bbox 865 1192 1000 1235">
+        <span id="w_112_0" class="ocr_word" title="bbox 865 1192 1000 1235">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins class="alt" title="nlp 2.00">Laërt.</ins>
+          </span>
+        </span>
+        <span id="w_112_1" class="ocr_word" title="bbox 865 1192 1000 1235">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_113" class="ocr_word" title="bbox 1027 1191 1111 1235">
@@ -635,11 +640,6 @@
         <span id="w_118" class="ocr_word" title="bbox 1747 1210 1826 1236" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τοῦ</ins>
-          </span>
-        </span>
-        <span id="w_119" class="ocr_word" title="bbox 1859 1195 2101 1249" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Καφισίου·</ins>
           </span>
         </span>
       </span>
@@ -986,9 +986,14 @@
             <del title="nlp 0.90">Diogenes</del>
           </span>
         </span>
-        <span id="w_188" class="ocr_word" title="bbox 863 1691 999 1733">
+        <span id="w_188_0" class="ocr_word" title="bbox 863 1691 999 1733">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins class="alt" title="nlp 2.00">Laërt.</ins>
+          </span>
+        </span>
+        <span id="w_188_1" class="ocr_word" title="bbox 863 1691 999 1733">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_189" class="ocr_word" title="bbox 1026 1690 1110 1733">
@@ -1025,11 +1030,6 @@
         <span id="w_195" class="ocr_word" title="bbox 1879 1707 1963 1746" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἔφη</ins>
-          </span>
-        </span>
-        <span id="w_196" class="ocr_word" title="bbox 2007 1692 2103 1733" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δεῖν</ins>
           </span>
         </span>
       </span>
@@ -1257,7 +1257,7 @@
         </span>
         <span id="w_237" class="ocr_word" title="bbox 861 2118 998 2160">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins title="nlp 2.00">ërt.</ins>
           </span>
         </span>
         <span id="w_238" class="ocr_word" title="bbox 1025 2117 1109 2160">
@@ -1501,7 +1501,7 @@
         </span>
         <span id="w_284" class="ocr_word" title="bbox 1298 2404 1568 2456" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,νεανίσκε,“</ins>
+            <ins title="nlp 2.00">νεανίσκε,“</ins>
           </span>
         </span>
         <span id="w_285" class="ocr_word" title="bbox 1600 2397 1734 2457" lang="grc">
@@ -1511,7 +1511,7 @@
         </span>
         <span id="w_286" class="ocr_word" title="bbox 1765 2402 1820 2457">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,ἡ</ins>
+            <ins title="nlp 2.00">ἡ</ins>
           </span>
         </span>
         <span id="w_287" class="ocr_word" title="bbox 1840 2414 1975 2457" lang="grc">
@@ -1601,7 +1601,7 @@
         </span>
         <span id="w_303" class="ocr_word" title="bbox 1001 2545 1137 2587">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins title="nlp 2.00">ërt.</ins>
           </span>
         </span>
         <span id="w_304" class="ocr_word" title="bbox 1164 2544 1249 2587">
@@ -1639,7 +1639,7 @@
       <span class="ocr_line" title="bbox 367 2612 2100 2672">
         <span id="w_310" class="ocr_word" title="bbox 367 2618 471 2672" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,διὰ</ins>
+            <ins title="nlp 2.00">διὰ</ins>
           </span>
         </span>
         <span id="w_311" class="ocr_word" title="bbox 513 2632 664 2671" lang="grc">
@@ -2115,23 +2115,7 @@
         </span>
         <span id="w_395" class="ocr_word" title="bbox 814 3089 970 3125">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">excidit:</ins>
-            <del title="nlp 0.90">excidit:</del>
-          </span>
-        </span>
-        <span id="w_396" class="ocr_word" title="bbox 998 3089 1100 3136">
-          <span class="alternatives">
-            <ins title="nlp 2.00">&amp;x003C;τῶν δὲ παραγγελμάτων&amp;x003E;</ins>
-          </span>
-        </span>
-        <span id="w_399" class="ocr_word" title="bbox 1556 3087 1615 3123">
-          <span class="alternatives">
-            <ins title="nlp 2.00">vel</ins>
-          </span>
-        </span>
-        <span id="w_400" class="ocr_word" title="bbox 1629 3087 1731 3135">
-          <span class="alternatives">
-            <ins title="nlp 2.00">&amp;003C;τῶν δὲ παραινέσεων&amp;003E; </ins>
+            <ins title="nlp 2.00">excidit: &amp;#x003C;τῶν δὲ παραγγελμάτων&amp;#x003Ε; vel &amp;#x003C;τῶν δὲ παραινέσεων&amp;#x003Ε;,</ins>
           </span>
         </span>
       </span>
