--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0119.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0119.html
@@ -312,9 +312,14 @@
             <del title="nlp 0.90">Diogenes</del>
           </span>
         </span>
-        <span id="w_61" class="ocr_word" title="bbox 755 647 891 691">
+        <span id="w_61_0" class="ocr_word" title="bbox 755 647 891 691">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins class="alt" title="nlp 2.00">Laërt.</ins>
+          </span>
+        </span>
+        <span id="w_61_1" class="ocr_word" title="bbox 755 647 891 691">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_62" class="ocr_word" title="bbox 921 648 1001 693">
@@ -341,11 +346,6 @@
         <span id="w_66" class="ocr_word" title="bbox 1620 653 1862 703" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">λαλοῦντος</ins>
-          </span>
-        </span>
-        <span id="w_67" class="ocr_word" title="bbox 1904 649 1990 708" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἴφη</ins>
           </span>
         </span>
       </span>
@@ -481,19 +481,19 @@
             <ins title="nlp 2.00">εἷπεν·</ins>
           </span>
         </span>
-        <span id="w_93" class="ocr_word" title="bbox 1716 864 1825 920" lang="grc">
+        <span id="w_93_0" class="ocr_word" title="bbox 1716 864 1825 920">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,ἐὰν</ins>
+            <ins class="alt" title="nlp 2.00">„ἐὰν</ins>
+          </span>
+        </span>
+        <span id="w_93_1" class="ocr_word" title="bbox 1716 864 1825 920">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_94" class="ocr_word" title="bbox 1849 867 1907 921" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">μὴ</ins>
-          </span>
-        </span>
-        <span id="w_95" class="ocr_word" title="bbox 1933 878 1989 909" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">σὺ</ins>
           </span>
         </span>
       </span>
@@ -705,9 +705,9 @@
             <ins class="alt" title="nlp 1.00">ψευδῆ·</ins>
           </span>
         </span>
-        <span id="w_136" class="ocr_word" title="bbox 1918 1168 1988 1207" lang="grc">
+        <span id="w_136_0" class="ocr_word" title="bbox 1918 1168 1988 1207">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,τί</ins>
+            <ins class="alt" title="nlp 2.00">„τί</ins>
           </span>
         </span>
       </span>
@@ -844,9 +844,14 @@
             <del title="nlp 0.90">Diogenes</del>
           </span>
         </span>
-        <span id="w_162" class="ocr_word" title="bbox 742 1434 880 1478">
+        <span id="w_162_0" class="ocr_word" title="bbox 742 1434 880 1478">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins class="alt" title="nlp 2.00">Laërt.</ins>
+          </span>
+        </span>
+        <span id="w_162_1" class="ocr_word" title="bbox 742 1434 880 1478">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_163" class="ocr_word" title="bbox 907 1434 990 1478">
@@ -873,11 +878,6 @@
         <span id="w_167" class="ocr_word" title="bbox 1497 1438 1835 1493" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">περιεργότερον</ins>
-          </span>
-        </span>
-        <span id="w_168" class="ocr_word" title="bbox 1870 1453 1988 1494" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">παρὰ</ins>
           </span>
         </span>
       </span>
@@ -1014,9 +1014,14 @@
             <del title="nlp 0.90">Diogenes</del>
           </span>
         </span>
-        <span id="w_194" class="ocr_word" title="bbox 733 1721 871 1764">
+        <span id="w_194_0" class="ocr_word" title="bbox 733 1721 871 1764">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins class="alt" title="nlp 2.00">Laërt.</ins>
+          </span>
+        </span>
+        <span id="w_194_1" class="ocr_word" title="bbox 733 1721 871 1764">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_195" class="ocr_word" title="bbox 892 1720 975 1763">
@@ -1050,16 +1055,16 @@
             <ins class="alt" title="nlp 1.00">θρασύτερον</ins>
           </span>
         </span>
-        <span id="w_201" class="ocr_word" title="bbox 1895 1723 1988 1766" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">διαλεγομένου</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 246 1791 1801 1850">
-        <span id="w_203" class="ocr_word" title="bbox 520 1808 632 1847" lang="grc">
+        <span id="w_203_0" class="ocr_word" title="bbox 520 1808 632 1847">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,οὐκ</ins>
+            <ins class="alt" title="nlp 2.00">„οὑκ</ins>
+          </span>
+        </span>
+        <span id="w_203_1" class="ocr_word" title="bbox 520 1808 632 1847">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_204" class="ocr_word" title="bbox 663 1809 720 1835" lang="grc">
@@ -1092,11 +1097,6 @@
             <ins class="alt" title="nlp 1.00">ἐπέρχεταί</ins>
           </span>
         </span>
-        <span id="w_210" class="ocr_word" title="bbox 1684 1795 1801 1849" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">μοι.“</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 365 1862 1989 1920">
         <span id="w_211" class="ocr_word" title="bbox 365 1862 458 1906">
@@ -1110,9 +1110,14 @@
             <del title="nlp 0.90">Diogenes</del>
           </span>
         </span>
-        <span id="w_213" class="ocr_word" title="bbox 733 1864 870 1907">
+        <span id="w_213_0" class="ocr_word" title="bbox 733 1864 870 1907">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins class="alt" title="nlp 2.00">Laërt.</ins>
+          </span>
+        </span>
+        <span id="w_213_1" class="ocr_word" title="bbox 733 1864 870 1907">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_214" class="ocr_word" title="bbox 892 1863 975 1906">
@@ -1156,11 +1161,6 @@
             <ins class="alt" title="nlp 1.00">οὐ</ins>
           </span>
         </span>
-        <span id="w_222" class="ocr_word" title="bbox 1915 1867 1989 1909" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">δοκεῖ</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 244 1934 1988 1992">
         <span id="w_224" class="ocr_word" title="bbox 336 1951 454 1978" lang="grc">
@@ -1185,7 +1185,7 @@
         </span>
         <span id="w_228" class="ocr_word" title="bbox 1031 1935 1209 1990" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,οὐδέν,</ins>
+            <ins title="nlp 2.00">οὐδέν,</ins>
           </span>
         </span>
         <span id="w_229" class="ocr_word" title="bbox 1230 1938 1328 1991" lang="grc">
@@ -1238,9 +1238,14 @@
             <del title="nlp 0.90">Diogenes</del>
           </span>
         </span>
-        <span id="w_238" class="ocr_word" title="bbox 739 2078 874 2121">
+        <span id="w_238_0" class="ocr_word" title="bbox 739 2078 874 2121">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins class="alt" title="nlp 2.00">Laërt.</ins>
+          </span>
+        </span>
+        <span id="w_238_1" class="ocr_word" title="bbox 739 2078 874 2121">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_239" class="ocr_word" title="bbox 903 2077 985 2121">
@@ -1267,11 +1272,6 @@
         <span id="w_243" class="ocr_word" title="bbox 1518 2078 1842 2135" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἀπρεπέστερον</ins>
-          </span>
-        </span>
-        <span id="w_244" class="ocr_word" title="bbox 1873 2075 1987 2123" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">εἶναι</ins>
           </span>
         </span>
       </span>
@@ -1324,9 +1324,14 @@
             <del title="nlp 0.90">Diogenes</del>
           </span>
         </span>
-        <span id="w_254" class="ocr_word" title="bbox 738 2222 876 2264">
+        <span id="w_254_0" class="ocr_word" title="bbox 738 2222 876 2264">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins class="alt" title="nlp 2.00">Laërt.</ins>
+          </span>
+        </span>
+        <span id="w_254_1" class="ocr_word" title="bbox 738 2222 876 2264">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_255" class="ocr_word" title="bbox 904 2220 987 2264">
@@ -1358,11 +1363,6 @@
         <span id="w_260" class="ocr_word" title="bbox 1736 2239 1795 2265" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τῷ</ins>
-          </span>
-        </span>
-        <span id="w_261" class="ocr_word" title="bbox 1839 2238 1985 2279" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μύρῳ,</ins>
           </span>
         </span>
       </span>
@@ -1667,7 +1667,7 @@
         </span>
         <span id="w_316" class="ocr_word" title="bbox 751 2650 887 2693">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins title="nlp 2.00">ërt.</ins>
           </span>
         </span>
         <span id="w_317" class="ocr_word" title="bbox 920 2648 1003 2692">
@@ -1725,7 +1725,7 @@
         </span>
         <span id="w_328" class="ocr_word" title="bbox 1453 2733 1550 2776" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,ὁρῶ</ins>
+            <ins title="nlp 2.00">ὁρῶ</ins>
           </span>
         </span>
         <span id="w_329" class="ocr_word" title="bbox 1582 2737 1698 2777" lang="grc">
@@ -1773,9 +1773,14 @@
             <del title="nlp 0.90">Diogenes</del>
           </span>
         </span>
-        <span id="w_337" class="ocr_word" title="bbox 739 2863 933 2907">
+        <span id="w_337_0" class="ocr_word" title="bbox 739 2863 933 2907">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërtius</ins>
+            <ins class="alt" title="nlp 2.00">Laërtius</ins>
+          </span>
+        </span>
+        <span id="w_337_1" class="ocr_word" title="bbox 739 2863 933 2907">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_338" class="ocr_word" title="bbox 959 2862 1042 2906">
@@ -1813,11 +1818,6 @@
         <span id="w_344" class="ocr_word" title="bbox 1627 2863 1803 2921" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">Ζήνων)</ins>
-          </span>
-        </span>
-        <span id="w_345" class="ocr_word" title="bbox 1847 2864 1986 2920" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μηδὲν</ins>
           </span>
         </span>
       </span>
