--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0121.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0121.html
@@ -86,7 +86,7 @@
       <span class="ocr_line" title="bbox 239 344 1983 414">
         <span id="w_13" class="ocr_word" title="bbox 239 344 394 403" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">,,ἧλθε,</ins>
+            <ins title="nlp 2.00">ἧλθε,</ins>
           </span>
         </span>
         <span id="w_14" class="ocr_word" title="bbox 412 351 658 404" lang="grc">
@@ -131,16 +131,11 @@
         </span>
         <span id="w_22" class="ocr_word" title="bbox 1785 371 1983 414" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πρᾶγμά</ins>
+            <ins title="nlp 2.00">πραγμάτων</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 238 417 1009 479">
-        <span id="w_23" class="ocr_word" title="bbox 238 434 327 462" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">των</ins>
-          </span>
-        </span>
         <span id="w_24" class="ocr_word" title="bbox 357 417 430 463" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">καὶ</ins>
@@ -371,7 +366,7 @@
       <span class="ocr_line" title="bbox 287 1327 918 1387">
         <span id="w_63" class="ocr_word" title="bbox 287 1327 360 1373" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">IV. Ἔλεγχοι</ins>
+            <ins title="nlp 2.00">Ἔλεγχοι</ins>
           </span>
         </span>
         <span id="w_64" class="ocr_word" title="bbox 653 1330 748 1373" lang="grc">
