--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0125.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0125.html
@@ -40,9 +40,14 @@
             <del title="nlp 0.90">Diogenes</del>
           </span>
         </span>
-        <span id="w_5" class="ocr_word" title="bbox 748 876 884 919">
+        <span id="w_5_0" class="ocr_word" title="bbox 748 876 884 919">
           <span class="alternatives">
-            <ins title="nlp 2.00">Laërt.</ins>
+            <ins class="alt" title="nlp 2.00">Laërt.</ins>
+          </span>
+        </span>
+        <span id="w_5_1" class="ocr_word" title="bbox 748 876 884 919">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_6" class="ocr_word" title="bbox 912 874 995 918">
@@ -74,11 +79,6 @@
         <span id="w_11" class="ocr_word" title="bbox 1680 876 1703 919" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ὁ</ins>
-          </span>
-        </span>
-        <span id="w_12" class="ocr_word" title="bbox 1738 877 1993 930" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">Φάλανθος,</ins>
           </span>
         </span>
       </span>
