--- a/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0126.html
+++ b/2013-02-02-09-57_stoicorumveterum01arniuoft_jp2_Kaibel_Round_4.book/p0126.html
@@ -432,9 +432,14 @@
             <ins class="alt" title="nlp 1.00">4.</ins>
           </span>
         </span>
-        <span id="w_81" class="ocr_word" title="bbox 1409 878 1552 938" lang="grc">
+        <span id="w_81_0" class="ocr_word" title="bbox 1409 878 1552 938">
           <span class="alternatives">
-            <ins title="nlp 2.00">(πε)ρί</ins>
+            <ins class="alt" title="nlp 2.00">(πε)ρί</ins>
+          </span>
+        </span>
+        <span id="w_81_1" class="ocr_word" title="bbox 1409 878 1552 938">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_82" class="ocr_word" title="bbox 1573 896 1622 935" lang="grc">
@@ -450,11 +455,6 @@
         <span id="w_84" class="ocr_word" title="bbox 1780 881 1785 936">
           <span class="alternatives">
             <ins title="nlp 2.00">|</ins>
-          </span>
-        </span>
-        <span id="w_85" class="ocr_word" title="bbox 1821 879 2052 936" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">Ἀρίστω-</ins>
           </span>
         </span>
       </span>
@@ -491,17 +491,17 @@
         </span>
         <span id="w_92" class="ocr_word" title="bbox 959 987 966 994">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">.</ins>
+            <ins title="nlp 2.00">.</ins>
           </span>
         </span>
         <span id="w_93" class="ocr_word" title="bbox 987 985 996 994">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">.</ins>
+            <ins title="nlp 2.00">.</ins>
           </span>
         </span>
         <span id="w_94" class="ocr_word" title="bbox 1016 985 1026 994">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">.</ins>
+            <ins title="nlp 2.00">.</ins>
           </span>
         </span>
         <span id="w_95" class="ocr_word" title="bbox 1058 954 1134 994">
@@ -613,7 +613,7 @@
         </span>
         <span id="w_115" class="ocr_word" title="bbox 1670 1110 1712 1136" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">| τό τι </ins>
+            <ins title="nlp 2.00">τό τι </ins>
           </span>
         </span>
         <span id="w_116" class="ocr_word" title="bbox 1756 1092 1954 1150" lang="grc">
@@ -656,22 +656,22 @@
         </span>
         <span id="w_124" class="ocr_word" title="bbox 1033 1166 1059 1207" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">δ</ins>
+            <ins title="nlp 2.00">δ</ins>
           </span>
         </span>
         <span id="w_125" class="ocr_word" title="bbox 1097 1199 1106 1208">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">.</ins>
+            <ins title="nlp 2.00">.</ins>
           </span>
         </span>
         <span id="w_126" class="ocr_word" title="bbox 1126 1198 1135 1207">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">.</ins>
+            <ins title="nlp 2.00">.</ins>
           </span>
         </span>
         <span id="w_127" class="ocr_word" title="bbox 1156 1198 1165 1207">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">.</ins>
+            <ins title="nlp 2.00">.</ins>
           </span>
         </span>
         <span id="w_128" class="ocr_word" title="bbox 1198 1168 1274 1208">
@@ -1155,7 +1155,7 @@
         </span>
         <span id="w_213" class="ocr_word" title="bbox 435 1807 439 1864" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">|τον</ins>
+            <ins title="nlp 2.00">τον</ins>
           </span>
         </span>
         <span id="w_214" class="ocr_word" title="bbox 558 1805 798 1864" lang="grc">
@@ -1165,22 +1165,22 @@
         </span>
         <span id="w_215" class="ocr_word" title="bbox 832 1840 840 1849">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">.</ins>
+            <ins title="nlp 2.00">.</ins>
           </span>
         </span>
         <span id="w_216" class="ocr_word" title="bbox 862 1841 870 1849">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">.</ins>
+            <ins title="nlp 2.00">.</ins>
           </span>
         </span>
         <span id="w_217" class="ocr_word" title="bbox 891 1841 900 1849">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">.</ins>
+            <ins title="nlp 2.00">.</ins>
           </span>
         </span>
         <span id="w_218" class="ocr_word" title="bbox 934 1806 1020 1865" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐν)</ins>
+            <ins title="nlp 2.00">(ἐν)</ins>
           </span>
         </span>
         <span id="w_219" class="ocr_word" title="bbox 1050 1809 1054 1863">
@@ -1210,17 +1210,17 @@
         </span>
         <span id="w_224" class="ocr_word" title="bbox 1782 1838 1790 1847">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">.</ins>
+            <ins title="nlp 2.00">.</ins>
           </span>
         </span>
         <span id="w_225" class="ocr_word" title="bbox 1811 1838 1820 1847">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">.</ins>
+            <ins title="nlp 2.00">.</ins>
           </span>
         </span>
         <span id="w_226" class="ocr_word" title="bbox 1842 1841 1850 1849">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.95">.</ins>
+            <ins title="nlp 2.00">.</ins>
           </span>
         </span>
         <span id="w_227" class="ocr_word" title="bbox 1883 1807 1959 1847">
@@ -1386,14 +1386,14 @@
             <ins class="alt" title="nlp 1.00">ἐπέλεγεν·</ins>
           </span>
         </span>
-        <span id="w_258" class="ocr_word" title="bbox 751 2091 811 2149" lang="grc">
+        <span id="w_258_0" class="ocr_word" title="bbox 751 2091 811 2149">
           <span class="alternatives">
-            <ins title="nlp 2.00">(Ε</ins>
+            <ins class="alt" title="nlp 2.00">(Ε</ins>
           </span>
         </span>
-        <span id="w_259" class="ocr_word" title="bbox 834 2091 941 2150">
+        <span id="w_258_1" class="ocr_word" title="bbox 751 2091 811 2149">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">215)</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -2034,13 +2034,8 @@
         </span>
         <span id="w_376" class="ocr_word" title="bbox 1541 2956 1765 3002">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">intelligitur</ins>
+            <ins class="alt" title="nlp 2.00">intelligitur;</ins>
             <del title="nlp 0.90">intelligitur</del>
-          </span>
-        </span>
-        <span id="w_377" class="ocr_word" title="bbox 1774 2970 1781 2998">
-          <span class="alternatives">
-            <ins title="nlp 2.00">;</ins>
           </span>
         </span>
         <span id="w_378" class="ocr_word" title="bbox 1807 2956 1846 2991">
